# OpenCV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cfg.xml  cmake_install.cmake  loadimage  manual_compile.sh  my_matrix.xml
LinuxGCC_OpenCV_DisplayImage/: .cproject  .project
LinuxGCC_OpenCV_DisplayImage/src/: DisplayImage.cpp
LinuxGCC_OpenCV_ReadAVI/: .cproject  .project
LinuxGCC_OpenCV_ReadAVI/src/: ReadAVI.cpp
basics/: loadimage  loadimage.cpp  manual_compile.txt
bok/: ReadMe_run_programs.txt  ch13_ex13_4.cpp  ch3_ex3_11.cpp  ch3_ex3_12.cpp  ch5_ex5_4.cpp  ch6_ex6_2.cpp  ch6_ex6_3.cpp  ch6_ex6_4.cpp  ch6_ex6_5.cpp
src/: affine.cpp  camera.cpp  canny.cpp  cannypyr.cpp  capprop.cpp  cvmat.cpp  dft.cpp  displayAVI.cpp  displayImage.cpp  grayVideo.cpp  hello_ocv.cpp  hist.cpp  hist2.cpp  histbackproj.cpp  histcmp.cpp  houghcircles.cpp  hsvdetect.cpp  hsvdetect2.cpp  info.cpp  inimat.cpp  loadimage.cpp  logpolar.cpp  matchtemplate.cpp  matsum.cpp  mouse.cpp  pipe.cpp  pipe2.cpp  pyrdownImage.cpp  readxml.cpp  roi.cpp  roi2.cpp  roi3.cpp  saturate.cpp  savemat.cpp  showImage.cpp  sliderAVI.cpp  smoothImage.cpp  splitrgb.cpp  sumrgb.cpp  sumrgb2.cpp  (+4 more)
