
# By: Muthanna A. Attyah 2017
#

cmake_minimum_required(VERSION 3.5.0)

project(OpenCV)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package( OpenCV REQUIRED )

# OpenCV Examples:
add_executable(displayAVI 	src/displayAVI.cpp)
add_executable(sliderAVI 	src/sliderAVI.cpp)
add_executable(smoothImage 	src/smoothImage.cpp)
add_executable(pyrdownImage src/pyrdownImage.cpp)
add_executable(canny     	src/canny.cpp)
add_executable(pipe         src/pipe.cpp)
add_executable(pipe2        src/pipe2.cpp)
add_executable(showImage    src/showImage.cpp)
add_executable(camera       src/camera.cpp)
add_executable(grayVideo    src/grayVideo.cpp)
add_executable(inimat       src/inimat.cpp)
add_executable(cvmat        src/cvmat.cpp)
add_executable(matsum       src/matsum.cpp)
add_executable(readxml      src/readxml.cpp)
add_executable(writexml     src/writexml.cpp)
add_executable(savemat      src/savemat.cpp)
add_executable(saturate     src/saturate.cpp)
add_executable(roi          src/roi.cpp)
add_executable(roi2         src/roi.cpp)
add_executable(roi3         src/roi.cpp)
add_executable(capprop      src/capprop.cpp)
add_executable(mouse        src/mouse.cpp)
add_executable(switch       src/switch.cpp)
add_executable(sumrgb       src/sumrgb.cpp)
add_executable(sumrgb2      src/sumrgb2.cpp)
add_executable(splitrgb     src/splitrgb.cpp)
add_executable(threshold    src/threshold.cpp)
add_executable(houghcircles src/houghcircles.cpp)
add_executable(affine       src/affine.cpp)
add_executable(warp         src/warp.cpp)
add_executable(logpolar     src/logpolar.cpp)
add_executable(dft          src/dft.cpp)
add_executable(hsvdetect    src/hsvdetect.cpp)
add_executable(hsvdetect2   src/hsvdetect2.cpp)

target_link_libraries(sliderAVI 	${OpenCV_LIBS})
target_link_libraries(displayAVI 	${OpenCV_LIBS})
target_link_libraries(smoothImage 	${OpenCV_LIBS})
target_link_libraries(pyrdownImage 	${OpenCV_LIBS})
target_link_libraries(canny      	${OpenCV_LIBS})
target_link_libraries(pipe          ${OpenCV_LIBS})
target_link_libraries(pipe2         ${OpenCV_LIBS})
target_link_libraries(showImage     ${OpenCV_LIBS})
target_link_libraries(camera        ${OpenCV_LIBS})
target_link_libraries(grayVideo     ${OpenCV_LIBS})
target_link_libraries(inimat        ${OpenCV_LIBS})
target_link_libraries(cvmat         ${OpenCV_LIBS})
target_link_libraries(matsum        ${OpenCV_LIBS})
target_link_libraries(readxml       ${OpenCV_LIBS})
target_link_libraries(writexml      ${OpenCV_LIBS})
target_link_libraries(savemat       ${OpenCV_LIBS})
target_link_libraries(saturate      ${OpenCV_LIBS})
target_link_libraries(roi           ${OpenCV_LIBS})
target_link_libraries(roi2          ${OpenCV_LIBS})
target_link_libraries(roi3          ${OpenCV_LIBS})
target_link_libraries(capprop       ${OpenCV_LIBS})
target_link_libraries(mouse         ${OpenCV_LIBS})
target_link_libraries(switch        ${OpenCV_LIBS})
target_link_libraries(sumrgb        ${OpenCV_LIBS})
target_link_libraries(splitrgb      ${OpenCV_LIBS})
target_link_libraries(sumrgb2       ${OpenCV_LIBS})
target_link_libraries(threshold     ${OpenCV_LIBS})
target_link_libraries(houghcircles  ${OpenCV_LIBS})
target_link_libraries(affine        ${OpenCV_LIBS})
target_link_libraries(warp          ${OpenCV_LIBS})
target_link_libraries(logpolar      ${OpenCV_LIBS})
target_link_libraries(dft           ${OpenCV_LIBS})
target_link_libraries(hsvdetect     ${OpenCV_LIBS})
target_link_libraries(hsvdetect2    ${OpenCV_LIBS})
